# Final_project_RoboCup-Home

./: README.md
Code/tum_ics/tiago_skin/config/: default.xml  dh_frame_list.yaml  p1.xml  p10.xml  p1e.xml  p2.xml  p3.xml  p5.xml  p6.xml  p7e.xml  p8.xml  p9.xml  patch_list.yaml  skin_driver_ns_list.yaml
Code/tum_ics/tiago_skin/launch/: full_config.launch  load_and_view_patch.launch
Code/tum_ics/tiago_skin/launch/configs/: base_frame_list.yaml
Code/tum_ics/tum_ics_skin_tutorials/src/Applications/: main_load_and_view_patch_tut.cpp  main_load_and_view_patches_tut_3.cpp
tum_ics/tiago_skin/: CMakeLists.txt  package.xml
tum_ics/tiago_skin/config/: left_finger_patch_list.yaml  p10e.xml  p2e.xml  p3e.xml  p4.xml  p4e.xml  p5e.xml  p6e.xml  p7.xml  p8e.xml  p9e.xml  patches_order.txt  right_finger_patch_list.yaml  test.xml  wrist_patch_list.yaml
tum_ics/tiago_skin/launch/: driver_ftdi_tiago.launch  load_and_view_patches.launch  load_and_view_patches_3.launch
tum_ics/tum_ics_skin_tutorials/: CMakeLists.txt
